[SH,SPI] Added initial support for the FSM SPI Controller.
This update includes initial support for the FSM SPI Serial Flash
Controller as used in STMicroelectronics' latest SoC devices.

This has only been tested on one board MB796 (mated with a MB705
peripheral board) using the STx5289 SoC, using just one SPI serial flash
device (M25P32).

Further testing needs to be done. However, currently READ, WRITE &
ERASE capabilities seem to work with no problems. Only "single" mode
(not dual I/O mode, nor quad I/O mode) has been attempted.

Due to the nature of the FSM controller, the "sspi" command can not be
used, as the FSM controller is *not* capable of full-duplex transfers.

To use this, then the SoC needs to support a FSM controller, and the
following macro needs to be defined: CONFIG_STM_FSM_SPI

Signed-off-by: Sean McGoogan <Sean.McGoogan@st.com>

--- a/cpu/sh/Makefile
+++ b/cpu/sh/Makefile
@@ -29,7 +29,7 @@ START	= start.o
 COBJS	= cpu.o interrupts.o usb.o cmd_pmb.o
 COBJS	+= ecc.o stm-nand.o cmd_copybbt.o	# NAND
 COBJS	+= sata-init.o sata-probe.o		# SATA
-COBJS	+= spi.o env_eeprom.o			# SPI
+COBJS	+= spi.o stm_spi_fsm.o env_eeprom.o	# SPI
 SOBJS	=
 
 SRCS	:= $(START:.o=.S) $(SOBJS:.o=.S) $(COBJS:.o=.c)
