SPEAr : Using ARM cotex A9 timer in place of GPT
Because of GPT source clock's asynchronous operation wrt CPU, the timer counter
read produces unexpected values. Timer operations are jeopardised, so this patch
uses ARM ca9 local timer for timer operations as a workaround

Signed-off-by: Vipin Kumar <vipin.kumar@st.com>

--- a/arch/arm/cpu/arm_cortexa8/spear13xx/Makefile
+++ b/arch/arm/cpu/arm_cortexa8/spear13xx/Makefile
@@ -28,9 +28,9 @@ include $(TOPDIR)/config.mk
 
 LIB	= $(obj)lib$(SOC).a
 
-COBJS	+= timer.o
-COBJS	+= reset.o
+COBJS	+= ca9_ltimer.o
 COBJS	+= cpu.o
+COBJS	+= reset.o
 
 SOBJS	= cache.o
 
